// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Lead1And2 /> should render an LEAD_1_AND_2 slice correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH sc-bxivhb gKudGZ"
  >
    <div
      class="sc-htpNat sc-ifAKCX jOiIlr"
    >
      <div>
        Article
      </div>
    </div>
    <div
      class="sc-htpNat sc-EHOje cqhYID"
    >
      <div
        class="sc-htpNat fSzhgS"
      >
        <div>
          Article
        </div>
      </div>
      <div>
        Article
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Lead1And2 /> should render an LEAD_1_AND_2_COLUMNIST slice correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bwzfXH sc-bxivhb gKudGZ"
  >
    <div
      class="sc-htpNat sc-ifAKCX jOiIlr"
    >
      <div>
        Article
      </div>
    </div>
    <div
      class="sc-htpNat sc-EHOje cqhYID"
    >
      <div
        class="sc-htpNat fSzhgS"
      >
        <div>
          Article
        </div>
      </div>
      <div>
        ArticleComment
      </div>
    </div>
  </div>
</DocumentFragment>
`;
